# boonli_api

./: # TODO.md  .gcloudignore  .gitignore  .pre-commit-config.yaml  NOTICE  README.md  TODO.md  cloud_functions.md  deploy.sh  main.py  pyproject.toml  release.sh  setup.cfg
.github/workflows/: codeql.yml  test.yml
boonli_api/: api.py  utils.py
boonli_menu/: boonli_menu.py
terraform/: .terraform.lock.hcl  main.tf  variables.tf
tests/: api_test.py
tests/fixtures/: boonli_home_1.html  boonli_home_2.html  boonli_home_3.html  boonli_login_1.html  boonli_login_2.html  boonli_login_invalid_username.html  day_menu_1.json  day_no_menu.json  day_no_menu_alert.json  day_server_error.json  day_unauth.json
